[tool.poetry]
name = "hai-dash"
version = "0.1.0"
description = "A dashboard that allows for the interpretation and analysis of recurrent neural networks applied to Electronic Health Records datasets."
authors = ["AndreCNF <andrecnf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
modin = "^0.7.0"
torch = "^1.4.0"
numpy = "^1.18.1"
plotly = "^4.5.1"
dash = "^1.9.0"
dash-bootstrap-components = "^0.8.3"
data-utils = {git = "https://github.com/AndreCNF/data-utils.git"}
shap = {git = "https://github.com/AndreCNF/shap.git"}
model-interpreter = {git = "https://github.com/AndreCNF/model-interpreter.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
