[tool.poetry]
name = "hai-dash"
version = "0.1.0"
description = "A dashboard that allows for the interpretation and analysis of recurrent neural networks applied to Electronic Health Records datasets."
authors = ["AndreCNF <andrecnf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
modin = "^0.7.0"
torch = "^1.4.0"
numpy = "^1.18.1"
plotly = "^4.9.0"
dash = "^1.14.0"
dash-bootstrap-components = "^0.10.3"
shap = {git = "https://github.com/AndreCNF/shap.git"}
dash-table = "^4.9.0"
data-utils = {git = "https://github.com/AndreCNF/data-utils.git"}
model-interpreter = {git = "https://github.com/AndreCNF/model-interpreter.git"}
Flask-Caching = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
